# imagepullsecret-patcher

./: Dockerfile  README.md  Taskfile.yml  imagepullsecret-patcher.py  pyproject.toml
deployment/: deployment.yaml  rbac.yaml
helm/imagepullsecret-patcher/: Chart.yaml  README.md  values.yaml
helm/imagepullsecret-patcher/templates/: _helpers.tpl  deployment.yaml  rbac.yaml
