[project]
name = "imagepullsecret-patcher"
version = "0.1.0"
description = "Patch ImagePullSecrets to ServiceAccounts cluster-wide"
authors = [
    {name = "Páldi Balázs",email = "devopstales2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "kubernetes (>=34.1.0,<35.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
